[package]
name = "real-time-chess"
version = "0.1.0"
edition = "2024"



[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
bincode = "1.3.3"
russh = "0.49.0"
russh-keys = "0.49.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tracing = "0.1.41"
uuid = { version = "1.11.0", features = ["serde", "v7"] }
